possible working GA

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <!-- google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Lobster|PT+Sans' rel='stylesheet' type='text/css'>
-
+    <%= render "layouts/google_analytics" %>
     <%= csrf_meta_tags %>
   </head>
 
