added layout changes (should have been diffrent branch)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,3 +32,11 @@ html body{
     font-size: 0.8em;
   }
 }
+
+/* Sign up button */
+#sign-up-button{
+  .button{
+    background-color: #222222;
+    color: #953759;
+  }
+}
