--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -5,6 +5,12 @@
   <br/>
   <h1 class="text-center">Sullivan Dates</h1>
   <p class="text-center">
-    For further information please join our facebook group <a href="https://www.facebook.com/groups/812762058783473/".><br/>Sullivan Dates</a>
+    For updates please sign up for our mailer.
+  </p>
+  <div class="text-center" id="sign-up-button">
+    <a href="#" class="button radius secondary">Sign Up</a>
+  </div>
+  <p class="text-center">
+    Also if you are not already a member, please join our <a href="#">Facebook Group</a>.
   </p>
 </div>
