--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -11,6 +11,7 @@
     <a href="#" class="button radius secondary">Sign Up</a>
   </div>
   <p class="text-center">
+    <!-- change this -->
     Also if you are not already a member, please join our <a href="#">Facebook Group</a>.
   </p>
 </div>
