--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -8,7 +8,7 @@
     For updates please sign up for our mailer.
   </p>
   <div class="text-center" id="sign-up-button">
-    <a href="#" class="button radius secondary">Sign Up</a>
+    <%= link_to "Sign up", signup_path, class: "button radius secondary" %>
   </div>
   <p class="text-center">
     Also if you are not already a member, please join our <a href="#">Facebook Group</a>.
