finished basic user signup

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -11,6 +11,6 @@
     <%= link_to "Sign up", signup_path, class: "button radius secondary" %>
   </div>
   <p class="text-center">
-    Also if you are not already a member, please join our <a href="#">Facebook Group</a>.
+    Also if you are not already a member, please join our <a href="https://www.facebook.com/groups/812762058783473/">Facebook Group</a>.
   </p>
 </div>
