--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,16 +1,26 @@
+<!-- Inliner Build Version 4380b7741bb759d6cb997545f3add21ad48f010b -->
 <!DOCTYPE html>
 <html>
-<head>
-  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
-</head>
+<head><meta content="text/html; charset=UTF-8" http-equiv="content-type"></head>
 <body>
-  <h1>
-    Welcome, <%= @user.name %>
-  </h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
-  <p>
-    For more infomation I will be sending out weekly mailers and I will be giving other information on our facebook group. If you're not a group memeber already I encourge you to join here: <a href="<%= @url %>">Sullivan Dates</a>
-    </p>
-</body>
+    <div class="contain">
+      <div class="content" style="width: 50%; padding-bottom: 25px; margin: 0 auto;">
+        <h1 style=": impact, charcoal, sans-serif; text-align: center;">
+          <%= @user.name %>
+        </h1>
+        <p style="text-align: center; font-family: 'Trebuchet MS', Helvetica, sans-serif;" align="center">
+          Thank you for signing up for updates on the progress of Sullivan Dates.
+          Over the next few weeks I will be releasing more details about what is
+          coming with this website.
+        </p>
+        <p style="text-align: center; font-family: 'Trebuchet MS', Helvetica, sans-serif;" align="center">
+          Until then if you haven't already please join
+          the Sullivan Dates: <a href="<%= @url %>">Facebook Group</a>
+        </p>
+      </div>
+      <div class="footer" style="text-align: center; border-top-width: 1px; border-top-style: solid; border-top-color: black; padding-top: 25px;" align="center">
+        © 2015 Sullivan Dates, All Rights Reserved.
+      </div>
+    </div>
+  </body>
 </html>
