changes to mailer veiw

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,8 +4,8 @@
 <head><meta content="text/html; charset=UTF-8" http-equiv="content-type"></head>
 <body>
     <div class="contain">
-      <div class="content" style="width: 50%; padding-bottom: 25px; margin: 0 auto;">
-        <h1 style=": impact, charcoal, sans-serif; text-align: center;">
+      <div class="content" style="width: 80%; padding-bottom: 25px; margin: 0 auto;">
+        <h1 style=": impact, charcoal, sans-serif; text-align: center;" align="center">
           <%= @user.name %>
         </h1>
         <p style="text-align: center; font-family: 'Trebuchet MS', Helvetica, sans-serif;" align="center">
