finished layout for V1 launch

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,16 +1,18 @@
 <% provide(:title, "Sullivan Dates") %>
 
-<div id="contain">
+<div id="contain" class="small-8 small-offset-2">
   <h4 class="text-center">Coming Soon</h4>
   <br/>
   <h1 class="text-center">Sullivan Dates</h1>
+  <h4 class="text-center">Your home for dating in the catskills</h4>
   <p class="text-center">
-    For updates please sign up for our mailer.
+    Offering a feature packed dating website built and ran locally from the ground up. Sign up now for a weekly mailer detailing website features and updates on progress being made, also if you sign up for the mailer you will receive an early invite to join the website before the rest of the public.
   </p>
   <div class="text-center" id="sign-up-button">
     <%= link_to "Sign up", signup_path, class: "button radius secondary" %>
   </div>
   <p class="text-center">
-    Also if you are not already a member, please join our <a href="https://www.facebook.com/groups/812762058783473/">Facebook Group</a>.
+    Also if you are not already a member, please join our Facebook group<br/>to conect with local singles today.
+    <br/><a href="https://www.facebook.com/groups/812762058783473/"><i class="fa fa-facebook-official fa-3x"></i></a>
   </p>
 </div>
