--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,6 +14,7 @@ html body{
   h1{
     font-family: 'Lobster', cursive;
     font-size: 4em;
+    margin-bottom: 0;
   }
   h4, p{
     font-family: 'PT Sans', sans-serif;
@@ -40,12 +41,17 @@ html body{
 #sub-button{
   background-color: #222;
   color: #953759;
+  margin-bottom: 30%;
+}
+/***** Icon *****/
+i{
+  margin-top: 5px;
 }
 
 /****** FOOTER *****/
 #footer{
   border-top: 1px solid rgba(#545454, 0.5);
-  margin-top: 18%;
+  margin-top: 10px;;
   p{
     margin-top: 20px;
     font-size: 0.8em;
@@ -71,6 +77,7 @@ html body{
 
 }
 input, textarea, select, .uneditable-input {
+  font-family: 'PT Sans', sans-serif;
   border: 1px solid #bbb;
   width: 100%;
   margin-bottom: 15px;
