--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <div id="footer">
-  <p class="text-center">&copy; - Corey Gibson, 2015</p>
+  <p class="text-center">&copy; 2015 Sullivan Dates, All Rights Reserved</p>
 </div>
