--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,8 +3,8 @@
 <div class="row">
   <div class="small-6 small-offset-3">
     <h1 class="text-center" id="new-sign-up">Sign up</h1>
-    <p>
-      For exclusive updates on Sullivan Dates which will be launching soon.
+    <p class="text-center">
+      For weekly updates and exclusive deatils on upcoming website features.
     </p>
     <div class="row">
       <div id="sign-up-form">
