--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <%= favicon_link_tag %>
+    <%= meta_tags(:title => "Sullivan Dates", :description => "Discover love in the Catskills, Sullivan Dates is your new home for a facets of dating in Sulllivan County.", :keywords => "Sullivan County, New york, Dating, Catskills, Find, Love") %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 
     <title><%= yield(:title) %></title>
 
