finish last_name migration

--- a/app/views/user_mailer/signup_notify.html.erb
+++ b/app/views/user_mailer/signup_notify.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head></head>
 <body>
-  <h1>new user, <%= @user.name %></h1>
-  <p>Name = <%= @user.name %></p>
+  <h1>new user, <%= @user.first_name %> <%= @user.last_name %></h1>
+  <p>Name = <%= @user.last_name %></p>
   <p>Email = <%= @user.email %></p>
   <p>zip code = <%= @user.zip_code %>
 </body>
