--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,7 +6,7 @@
     <div class="contain">
       <div class="content" style="width: 80%; padding-bottom: 25px; margin: 0 auto;">
         <h1 style=": impact, charcoal, sans-serif; text-align: center;" align="center">
-          <%= @user.name %>
+          Welcome, <%= @user.first_name %>
         </h1>
         <p style="text-align: center; font-family: 'Trebuchet MS', Helvetica, sans-serif;" align="center">
           Thank you for signing up for updates on the progress of Sullivan Dates.
