--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,7 +15,7 @@
           <%= f.text_field :first_name %>
 
           <%= f.label :last_name %>
-          <%= f.label :last_name %>
+          <%= f.text_field :last_name %>
 
           <%= f.label :email %>
           <%= f.text_field :email %>
